--- a/go/web/public/css/mango.less
+++ b/go/web/public/css/mango.less
@@ -2089,7 +2089,8 @@
     }
 
     .uk-text-meta {
-      color: #777;
+      // Readable on both dark reader chrome and light Flat modal overrides
+      color: #8a8a8a;
     }
 
     .uk-modal-body {
@@ -2123,7 +2124,7 @@
     .uk-form-label {
       font-weight: 600;
       font-size: 0.85rem;
-      color: #AAA;
+      color: #b0b0b0;
     }
 
     .uk-select {
